fix: spacing between text elements on ctaform

--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -5186,10 +5186,6 @@ details.collapse summary::-webkit-details-marker {
     margin-right: auto;
   }
 
-  .lg\:mb-10 {
-    margin-bottom: 2.5rem;
-  }
-
   .lg\:mb-6 {
     margin-bottom: 1.5rem;
   }
